blackspace tstuff teste

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="carpet">
       <div class="mewo-container">
-        <img id="mewo-img" class="interactive-item invert-on-dark" src="/media/image/elements/single/mewo.gif" alt="Mewo, o gato" draggable="false" />
+        <img id="mewo-img" class="invert-on-dark" src="/media/image/elements/single/mewo.gif" alt="Mewo, o gato" draggable="false" />
         <audio id="mewo-audio">
           <source src="/media/audio/SFX/mewo.mp3" type="audio/mpeg">
         </audio>
