blackspace and nav better

--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -50,7 +50,7 @@
 
             <figure class="gallery-item center-item" style="--n: 7;">
                 <img class="gallery-image" src="../../media/image/Album_blackspace/SOMETHING.png" alt="A criatura conhecida como SOMETHING, uma manifestação de culpa." data-description="Eu não sou um monstro. Sou a verdade que você tenta esquecer. Sou o que você vê no espelho quando a luz se apaga." draggable="false" />
-                <figcaption>7. SOMETHING</figcaption>
+                <figcaption id="last-figcaption">7. SOMETHING</figcaption>
             </figure>
         </div>
     </main>
