--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="/pages/styles/blackspace.css">
     <script defer src="/pages/scripts/blackspace.js"></script>
 </head>
-<body data-theme="dark"> <header id="header">
-        <div id="background-layer"></div>
-        <div id="content">
-            <h1>BLACKSPACE</h1>
-        </div>
-    </header>
+<body data-theme="dark"> 
 
     <main>
         <section class="intro fade-in-element">
