--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -46,7 +46,7 @@
       </p>
     </section>
 
-    <section class="pages fade-in-element content-card" aria-labelledby="gallery-title">
+    <section class="pages fade-in-element" aria-labelledby="gallery-title">
       <h2 id="gallery-title" style="font-size: 4rem;">Galeria</h2>
       <div class="pages-content">
         <figure>
