--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -47,7 +47,7 @@
     </section>
 
     <section class="pages fade-in-element" aria-labelledby="gallery-title">
-      <h2 id="gallery-title" style="font-size: 4rem;">Galeria</h2>
+      <h2 id="galeria" style="font-size: 4rem;">Galeria</h2>
       <div class="pages-content">
         <figure>
           <img class="gallery-image" src="/media/image/elements/single/Album_piquinique.webp" alt="Álbum de fotos no Headspace" data-description="Depois de comer, OMORI e seus amigos caem no sono, com exceção de HERO e MARI." data-link="headspace.html" draggable="false" />
@@ -69,7 +69,7 @@
           <h2 class="bs-title">Aconteça o que acontecer...</h2>
         </section>
         <section class="content-card fade-in-element">
-          <h2 class="bs-title">Eu sempre estarei ao seu lado.</h2>
+          <h2 class="bs-title">Eu sempre estarei ao seu lado. <br> Seja forte, enfrente-os.</h2>
         </section>
         <figure>
           <img class="gallery-image" src="/media/image/elements/single/blackspace_hole.png" alt="Buraco para o Blackspace" data-description="Você NÃO pode se esconder de si mesmo." data-link="blackspace.html" draggable="false" />
