--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -11,7 +11,7 @@
 <body> 
     <main>
         <section class="intro fade-in-element">
-            <h2 class="omori-font-text">WELCOME</h2>
+            <h2 class="omori-font-text">WELCOME TO BLACKSPACE</h2>
             <p>Siga os números. A memória está esperando.</p>
         </section>
 
