--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -48,7 +48,7 @@
 
     <section class="pages fade-in-element" aria-labelledby="gallery-title">
       <h2 id="galeria" style="font-size: 4rem;">Galeria</h2>
-      <div class="pages-content">
+      <div class="pages-content content-card" style="padding-bottom: 50px; padding-top: 50px;">
         <figure>
           <img class="gallery-image" src="/media/image/elements/single/Album_piquinique.webp" alt="Álbum de fotos no Headspace" data-description="Depois de comer, OMORI e seus amigos caem no sono, com exceção de HERO e MARI." data-link="headspace.html" draggable="false" />
           <figcaption>HEADSPACE</figcaption>
