--- a/pages/html/headspace.html
+++ b/pages/html/headspace.html
@@ -18,7 +18,6 @@
     </header>
 
 
-
     <main id="main-content">
         <section class="fade-in-element">
             <h2 class="omori-font-text">WELCOME TO HEADSPACE</h2>
@@ -26,98 +25,107 @@
         <section class="images fade-in-element" id="gallery">
             <div class="images-content">
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_01.webp" 
-                    alt="headspace-album" 
-                    data-description="'MARI está ensinando todo mundo a fazer coroas de flores! OMORI e KEL estão segurando o exemplo que ela fez. Tão bonito...'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_01.webp"
+                        alt="headspace-album"
+                        data-description="'MARI está ensinando todo mundo a fazer coroas de flores! OMORI e KEL estão segurando o exemplo que ela fez. Tão bonito...'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 1</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_02.webp" 
-                    alt="real-album" 
-                    data-description="'OMORI e KEL desistiram e saíram correndo, mas eu e a AUBREY pegamos o jeito rapidinho!'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_02.webp"
+                        alt="real-album"
+                        data-description="'OMORI e KEL desistiram e saíram correndo, mas eu e a AUBREY pegamos o jeito rapidinho!'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 2</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_03.webp" 
-                    alt="real-album" 
-                    data-description="'HERO ainda tá fazendo a coroa de flores dele. Tá levando um tempinho, mas ele tá conseguindo. Tem que admirar a persistência!'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_03.webp"
+                        alt="real-album"
+                        data-description="'HERO ainda tá fazendo a coroa de flores dele. Tá levando um tempinho, mas ele tá conseguindo. Tem que admirar a persistência!'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 3</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_04.webp" 
-                    alt="real-album" 
-                    data-description="'Todo mundo tá comendo melancia. Tão suculenta! A AUBREY tá com umas sementes no rosto. Alguém devia avisar ela.'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_04.webp"
+                        alt="real-album"
+                        data-description="'Todo mundo tá comendo melancia. Tão suculenta! A AUBREY tá com umas sementes no rosto. Alguém devia avisar ela.'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 4</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_05.webp" 
-                    alt="real-album" 
-                    data-description="'KEL tá bebendo uma garrafa de LEITE, o favorito dele! Melhor eu não chegar muito perto, senão ele molha minha câmera.'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_05.webp"
+                        alt="real-album"
+                        data-description="'KEL tá bebendo uma garrafa de LEITE, o favorito dele! Melhor eu não chegar muito perto, senão ele molha minha câmera.'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 5</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_06.webp" 
-                    alt="real-album" 
-                    data-description="'MARI pediu pro HERO tirar uma foto da gente. Todo mundo acha que a coroa de flores combinou comigo.'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_06.webp"
+                        alt="real-album"
+                        data-description="'MARI pediu pro HERO tirar uma foto da gente. Todo mundo acha que a coroa de flores combinou comigo.'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 6</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_07.webp" 
-                    alt="real-album" 
-                    data-description="'HERO se inclinando pra dar um beijinho! KEL tá com uma cara de irritado. Ah, o amor entre irmãos...'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_07.webp"
+                        alt="real-album"
+                        data-description="'HERO se inclinando pra dar um beijinho! KEL tá com uma cara de irritado. Ah, o amor entre irmãos...'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 7</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_08.webp" 
-                    alt="real-album" 
-                    data-description="'Hoje é dia de piquenique! A MARI quis tirar uma foto de todo mundo. Diiiga xis!'"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_08.webp"
+                        alt="real-album"
+                        data-description="'Hoje é dia de piquenique! A MARI quis tirar uma foto de todo mundo. Diiiga xis!'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 8</figcaption>
                 </figure>
 
                 <figure>
-                <img 
-                    class="gallery-image"
-                    src="/media/image/Album_headspace/DW_ALBUM_09.webp" 
-                    alt="real-album" 
-                    data-description="'Todos os nossos pés formando um círculo! Consegue adivinhar de quem é cada pé?'
-"
-                    draggable="false"
-                />
+                    <img
+                        class="gallery-image"
+                        src="/media/image/Album_headspace/DW_ALBUM_09.webp"
+                        alt="real-album"
+                        data-description="'Todos os nossos pés formando um círculo! Consegue adivinhar de quem é cada pé?'"
+                        draggable="false"
+                    />
+                    <figcaption>Foto 9</figcaption>
                 </figure>
             </div>
         </section>
     </main>
+
 
     <footer>
     <div class="footer-items">
