--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/pages/styles/blackspace.css">
     <script defer src="/pages/scripts/blackspace.js"></script>
 </head>
-<body> 
+<body>
     <main>
         <section class="intro fade-in-element">
             <h2 class="omori-font-text">WELCOME TO BLACKSPACE</h2>
@@ -47,6 +47,11 @@
                 <figcaption id="last-figcaption">7. SOMETHING</figcaption>
             </figure>
         </div>
+
+        <section class="about-section fade-in-element">
+            <a href="/pages/html/paginaSobre.html" class="modal-button omori-font-text">Sobre</a>
+        </section>
+        
     </main>
 
     <footer>
@@ -80,6 +85,5 @@
             <button id="confirmBackButton" class="modal-button omori-font-text" draggable="false">Sim.</button>
         </div>
     </dialog>
-
 </body>
 </html>
