--- a/pages/html/blackspace.html
+++ b/pages/html/blackspace.html
@@ -47,20 +47,20 @@
                 <figcaption id="last-figcaption">7. SOMETHING</figcaption>
             </figure>
         </div>
-
-        <section class="about-section fade-in-element">
-            <a href="/pages/html/paginaSobre.html" class="modal-button omori-font-text">Sobre</a>
-        </section>
         
     </main>
 
     <footer>
         <div class="footer-items">
-            <a id="text-goBack" style="cursor: pointer;" draggable="false">Voltar à página principal</a>
-            <div class="footer-mention">
-                <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a>
-                <span>&</span>
-                <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
+            <a id="text-goBack" style="cursor: pointer;" draggable="false">Voltar</a>
+            
+            <div class="right" style="display: flex; gap: 20px;">
+                <a id="about-a" href="/pages/html/paginaSobre.html" style="font-size: 3rem;" class="modal-button omori-font-text">Sobre o site</a>
+                <div class="footer-mention">
+                    <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a>
+                    <span>&</span>
+                    <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
+                </div>
             </div>
         </div>
     </footer>
