--- a/pages/html/paginaSobre.html
+++ b/pages/html/paginaSobre.html
@@ -79,10 +79,16 @@
             Por fim, a moral de <em>OMORI</em> é que a cura não é um "final feliz" instantâneo, mas sim um <strong>processo contínuo e difícil</strong>. O jogo termina com o início da confissão, não com a resolução. A verdadeira coragem mostrada não foi vencer monstros em um sonho, mas ter a força de dizer "Eu preciso lhes contar uma coisa" para as pessoas que você ama, abrindo a porta para um futuro incerto, mas, pela primeira vez em anos, <strong>real</strong>.
         </p>
     </section>
-      <footer>
-        <div class="footer-items">
-            <a id="text-goBack" href="/pages/html/homePage.html" draggable="false">Voltar para a página principal</a>
-        </div>
-    </footer>
+        <footer>
+            <div class="footer-items">
+            <a id="icon-goBack" href="/index.html" draggable="false">Voltar</a>
+            <a id="text-goBack" href="/index.html" draggable="false">Voltar ao WHITESPACE</a>
+            <div class="footer-mention">
+                <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a>
+                <span>&</span>
+                <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
+            </div>
+            </div>
+        </footer>
 </body>
 </html>
