--- a/pages/html/headspace.html
+++ b/pages/html/headspace.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR"> 
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADSPACE</title>
-    <link rel="icon" href="/media/image/page-icons/index.png" type="image/x-icon">
+    <link rel="icon" href="/media/image/omori_sprite_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="/pages/styles/headspace.css">
-    <script defer src="/pages/scripts/headsPace.js"></script>
+    <script defer src="/pages/scripts/faraway.js"></script>
 </head>
 <body>
-    
     <header id="header">
         <div id="background-layer"></div>
         <div id="content">
@@ -17,18 +16,17 @@
         </div>
     </header>
 
-
     <main id="main-content">
-        <section class="fade-in-element">
+        <section class="intro-section fade-in-element">
             <h2 class="omori-font-text">WELCOME TO HEADSPACE</h2>
         </section>
-        <section class="images fade-in-element" id="gallery">
-            <div class="images-content">
-                <figure>
+
+        <section class="gallery-container fade-in-element" id="gallery">
+            <figure>
                     <img
                         class="gallery-image"
                         src="/media/image/Album_headspace/DW_ALBUM_01.webp"
-                        alt="headspace-album"
+                        alt="Foto 1"
                         data-description="'MARI está ensinando todo mundo a fazer coroas de flores! OMORI e KEL estão segurando o exemplo que ela fez. Tão bonito...'"
                         draggable="false"
                     />
@@ -122,29 +120,30 @@
                     />
                     <figcaption>Foto 9</figcaption>
                 </figure>
-            </div>
         </section>
     </main>
 
-
     <footer>
-    <div class="footer-items">
-      <a id="icon-goBack" href="/pages/html/homePage.html" draggable="false">Voltar</a>
-      <a id="text-goBack" href="/pages/html/homePage.html" draggable="false">Voltar à página principal</a>
-      <div class="footer-mention">
-        <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a> & <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
-      </div>
-    </div>
+        <div class="footer-items">
+            <a id="text-goBack" href="/pages/html/homePage.html" draggable="false">Voltar </a>
+            <div class="footer-mention">
+                <a href="https://github.com/henriqclaro" draggable="false">@hrkms</a>
+                <span>&</span>
+                <a href="https://github.com/criperrr" draggable="false">@criperrr</a>
+            </div>
+        </div>
     </footer>
 
-    <dialog id="imageModal" class="modal-overlay">
-        <div class="modal-content gallery-modal">
-            <button id="closeModal" class="modal-close">&times;</button>
-            <button id="prevBtn" class="nav-arrow">&#8592;</button>
-            <img id="modalImage" src="" alt="Imagem ampliada" draggable="false" />
-            <button id="nextBtn" class="nav-arrow">&#8594;</button>
+    <dialog  id="imageModal" class="modal-overlay">
+        <div class="modal-content">
+            <button id="closeModal" class="modal-close" aria-label="Fechar modal">&times;</button>
+            <div class="modal-body">
+                <button id="prevBtn" class="nav-arrow" aria-label="Imagem anterior">&#8592;</button>
+                <img id="modalImage" src="" alt="Imagem ampliada" draggable="false" />
+                <button id="nextBtn" class="nav-arrow" aria-label="Próxima imagem">&#8594;</button>
+            </div>
             <p id="modalDescription"></p>
-            <button id="modalLink" class="modal-button omori-font-text" draggable="false">OK</button>
+            <button id="modalOkButton" class="modal-button omori-font-text" draggable="false">OK</button>
         </div>
     </dialog>
 
